# MeAtten

./: README.md
benchmark/c2python/: CMakeLists.txt  bench_sdpa.py  sdpa_wrapper.cpp
benchmark/sdpa/: Makefile  bench_meformer_sdpa.cpp  bench_meformer_sdpa.x  run_bench_meformer_sdpa.sh
csrc/: Makefile  bench_mid_fuse.c  bench_pre_fuse.c  fused_exp_sum_scorexv_kernel_v1.c  fused_exp_sum_scorexv_kernel_v2.c  fused_scalexqxkt_mask_max_kernel.c  meformer.c  meformer.h  utils.h
